[package]
name = "groomer-rs"
version = "0.1.0"
authors = ["Martin Betak <matobet@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "groomer"

[dependencies]
redis-module = { version = "0.9", features = ["experimental-api"] }
itertools = "0.9"
lazy_format = "1.7"

[dev-dependencies]
redis = "0.16"
redis-module = { version = "0.9", features = ["experimental-api", "test"] }
redis-test-macros = { path = "redis-test-macros" }